# DIO-auth

./: .gitignore  pyproject.toml
src/: jwt.py  settings.py
src/core/entities/: users.py
src/core/interfaces/: __init__.py  repository.py
src/core/use_cases/: user_auth.py
src/database/: crud.py  models.py
src/services/: secutiry.py
